@@ -1,0 +1,4 @@
+syncedatadir = ${datadir}/synce-hal
+syncedata_DATA = dhclient.conf
+
+EXTRA_DIST = $(syncedata_DATA)
