@@ -1,0 +1,9 @@
+# Configuration file for dhclient for synce-hal
+#
+# We override the system file with this one to
+# ensure it is as simple as possible
+#
+
+request subnet-mask, broadcast-address, time-offset, routers,
+	domain-name, domain-name-servers, domain-search, host-name,
+	netbios-name-servers, netbios-scope, interface-mtu;
