@@ -1,3 +1,9 @@
+2008-11-12  Mark Ellis <mark@mpellis.org.uk>
+
+	* provide sparse config file for dhclient, specify lease
+	  and pid file names
+	* release dhcp lease on device disconnect
+
 2008-10-28  Mark Ellis <mark@mpellis.org.uk>
 
 	* src/utils.c - correct use of g_debug()
